Works in chrome not safari
Signed-off-by: Gary Smith <bk@kc.gs>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 install:
 - docker version
 script:
-- docker build --compress --pull --tag ler0ever/evdev .
+- docker build --compress --pull --tag registry.kc.gs/kc-code .
 after_success:
 - '[ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "master" ] && docker
-  login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" && docker push "ler0ever/evdev"'
+  login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD" && docker push "registry.kc.gs/kc-code"'
